--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@tanstack/react-query": "^5.51.15",
     "antd": "^5.19.3",
+    "express": "^4.19.2",
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
