--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hook-form": "^7.52.1",
     "sass": "^1.77.8",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
