--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.77.8",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "sweetalert2": "^11.12.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
