--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
     "sweetalert2": "^11.12.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
