--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@tanstack/react-query": "^5.51.15",
     "antd": "^5.19.3",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "14.2.5",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
